fixed step image overflow

--- a/css/style.css
+++ b/css/style.css
@@ -248,11 +248,14 @@ main .project-description {
   text-decoration: underline;
   opacity: 0.8;
 }
-.project-step-content .project-step-image {
-  margin: 0px 60px;
-  margin-bottom: 25px;
-  max-width: 200px;
-  max-height: 300px;
+.project-step-content .step-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.project-step-content .step-image-container img {
+  width: 180px;
+  margin-bottom: 30px;
 }
 
 /* Video */
